[gd_scene load_steps=20 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://music/60_TablaFull_01_239_SP.wav" type="AudioStream" id=2]
[ext_resource path="res://rewa_fort_gate.jpg" type="Texture" id=3]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Default_0.tres" type="Theme" id=5]
[ext_resource path="res://music/Dholak_06_697.wav" type="AudioStream" id=6]
[ext_resource path="res://music/DryToneKanjira_730.wav" type="AudioStream" id=7]
[ext_resource path="res://ART/—Pngtree—black gradient vertical transparent_5659187.png" type="Texture" id=8]
[ext_resource path="res://ART/back_img2.png" type="Texture" id=9]
[ext_resource path="res://ART/Horizontal-Veena-1024x1024.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="RewaFortGate" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 574, 343 )
scale = Vector2( 0.751875, 0.785848 )
texture = ExtResource( 3 )

[node name="—Pngtree—blackGradientVerticalTransparent5659187" type="Sprite" parent="."]
position = Vector2( 375.5, 300.5 )
scale = Vector2( 0.3012, 0.2428 )
texture = ExtResource( 8 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -82.0
margin_right = -279.0
margin_bottom = 145.0

[node name="Start_Tour" type="Button" parent="Menu"]
margin_right = 181.0
margin_bottom = 53.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Start Tour"
icon = ExtResource( 10 )
flat = true
expand_icon = true

[node name="Score_Board" type="Button" parent="Menu"]
margin_top = 57.0
margin_right = 181.0
margin_bottom = 111.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Score Board"
icon = ExtResource( 10 )
flat = true
expand_icon = true

[node name="Settings" type="Button" parent="Menu"]
margin_top = 115.0
margin_right = 181.0
margin_bottom = 169.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Settings"
icon = ExtResource( 10 )
flat = true
expand_icon = true

[node name="Quit" type="Button" parent="Menu"]
margin_top = 173.0
margin_right = 181.0
margin_bottom = 227.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Quit"
icon = ExtResource( 10 )
flat = true
expand_icon = true

[node name="Settings" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 34.0
margin_top = 175.0
margin_right = 214.0
margin_bottom = 471.0

[node name="Profile" type="Button" parent="Settings/VBoxContainer"]
margin_right = 180.0
margin_bottom = 56.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "Profile"
flat = true

[node name="Audio" type="Button" parent="Settings/VBoxContainer"]
margin_top = 60.0
margin_right = 180.0
margin_bottom = 116.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Audio"
flat = true

[node name="Video" type="Button" parent="Settings/VBoxContainer"]
margin_top = 120.0
margin_right = 180.0
margin_bottom = 176.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "Video"
flat = true

[node name="Tutorial" type="Button" parent="Settings/VBoxContainer"]
margin_top = 180.0
margin_right = 180.0
margin_bottom = 236.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Tutorial"
flat = true

[node name="Language" type="Button" parent="Settings/VBoxContainer"]
margin_top = 240.0
margin_right = 180.0
margin_bottom = 296.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
text = "Language"
flat = true

[node name="BackSettings" type="Button" parent="Settings"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_right = 101.0
margin_bottom = 40.0
theme = ExtResource( 5 )
text = "Back"
icon = ExtResource( 9 )
flat = true
icon_align = 1
expand_icon = true

[node name="Video" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 58.0
margin_top = 233.0
margin_right = 183.0
margin_bottom = 416.0
rect_pivot_offset = Vector2( 384, 624 )

[node name="Lables" type="VBoxContainer" parent="Video/HBoxContainer"]
margin_right = 93.0
margin_bottom = 183.0

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Lables"]
margin_top = 19.0
margin_right = 93.0
margin_bottom = 39.0
size_flags_vertical = 6
text = "Full Screen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Lables"]
margin_top = 81.0
margin_right = 93.0
margin_bottom = 101.0
size_flags_vertical = 6
text = "Borderless"

[node name="VSync" type="Label" parent="Video/HBoxContainer/Lables"]
margin_top = 143.0
margin_right = 93.0
margin_bottom = 163.0
size_flags_vertical = 6
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
margin_left = 97.0
margin_right = 125.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_right = 28.0
margin_bottom = 58.0
size_flags_vertical = 3
flat = true

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_top = 62.0
margin_right = 28.0
margin_bottom = 120.0
size_flags_vertical = 3
flat = true

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_top = 124.0
margin_right = 28.0
margin_bottom = 183.0
size_flags_vertical = 3
flat = true

[node name="BackToSettings4" type="Button" parent="Video"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_right = 101.0
margin_bottom = 40.0
text = "Back"
icon = ExtResource( 9 )
flat = true
icon_align = 1
expand_icon = true

[node name="Audio" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = 231.0
margin_right = 346.0
margin_bottom = 414.0
rect_pivot_offset = Vector2( 384, 624 )

[node name="Lables" type="VBoxContainer" parent="Audio/HBoxContainer"]
margin_right = 80.0
margin_bottom = 183.0

[node name="Master" type="Label" parent="Audio/HBoxContainer/Lables"]
margin_top = 19.0
margin_right = 80.0
margin_bottom = 39.0
size_flags_vertical = 6
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Lables"]
margin_top = 81.0
margin_right = 80.0
margin_bottom = 101.0
size_flags_vertical = 6
text = "Music"

[node name="Sound FX" type="Label" parent="Audio/HBoxContainer/Lables"]
margin_top = 143.0
margin_right = 80.0
margin_bottom = 163.0
size_flags_vertical = 6
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
margin_left = 84.0
margin_right = 296.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_top = 21.0
margin_right = 212.0
margin_bottom = 37.0
size_flags_vertical = 6

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_top = 83.0
margin_right = 212.0
margin_bottom = 99.0
size_flags_vertical = 6

[node name="Sound FX" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_top = 145.0
margin_right = 212.0
margin_bottom = 161.0
size_flags_vertical = 6

[node name="BackToSettings3" type="Button" parent="Audio"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_right = 101.0
margin_bottom = 40.0
text = "Back"
icon = ExtResource( 9 )
flat = true
icon_align = 1
expand_icon = true

[node name="Tutorial" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="BackToSettings2" type="Button" parent="Tutorial"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_right = 101.0
margin_bottom = 40.0
text = "Back"
icon = ExtResource( 9 )
flat = true
icon_align = 1
expand_icon = true

[node name="Profile" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="BackToSettings1" type="Button" parent="Profile"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_right = 101.0
margin_bottom = 40.0
text = "Back"
icon = ExtResource( 9 )
flat = true
icon_align = 1
expand_icon = true

[node name="Language" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="BackToSettings" type="Button" parent="Language"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_right = 101.0
margin_bottom = 40.0
text = "Back"
icon = ExtResource( 9 )
flat = true
icon_align = 1
expand_icon = true

[node name="Start_Tour" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="BackSettings" type="Button" parent="Start_Tour"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_right = 101.0
margin_bottom = 40.0
text = "Back"
icon = ExtResource( 9 )
flat = true
icon_align = 1
expand_icon = true

[node name="Score_Board" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="BackToMenu" type="Button" parent="Score_Board"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_right = 101.0
margin_bottom = 40.0
text = "Back"
icon = ExtResource( 9 )
flat = true
icon_align = 1
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0
bus = "Music"

[node name="click_enter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -80.0
bus = "Sound FX"

[node name="click_back" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -80.0
bus = "Sound FX"

[connection signal="pressed" from="Menu/Start_Tour" to="." method="_on_Start_Tour_pressed"]
[connection signal="pressed" from="Menu/Score_Board" to="." method="_on_Score_Board_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Profile" to="." method="_on_Profile_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Language" to="." method="_on_Language_pressed"]
[connection signal="pressed" from="Settings/BackSettings" to="." method="_on_BackSettings_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/VSync" to="." method="_on_VSync_toggled"]
[connection signal="pressed" from="Video/BackToSettings4" to="." method="_on_BackToSettings4_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Sound FX" to="." method="_on_Sound_FX_value_changed"]
[connection signal="pressed" from="Audio/BackToSettings3" to="." method="_on_BackToSettings3_pressed"]
[connection signal="pressed" from="Tutorial/BackToSettings2" to="." method="_on_BackToSettings2_pressed"]
[connection signal="pressed" from="Profile/BackToSettings1" to="." method="_on_BackToSettings1_pressed"]
[connection signal="pressed" from="Language/BackToSettings" to="." method="_on_BackToSettings_pressed"]
[connection signal="pressed" from="Start_Tour/BackSettings" to="." method="_on_BackSettings_pressed"]
[connection signal="pressed" from="Score_Board/BackToMenu" to="." method="_on_BackSettings_pressed"]
[connection signal="pressed" from="Score_Board/BackToMenu" to="." method="_on_BackToMenu_pressed"]
